estilos final vida

--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -819,66 +819,66 @@ html(lang="en")
 						p.dato $3,000.00
 			.row
 				.space
-		.container.bgazul5.envioPoliza
-			.row
-				.col-md-offset-1.col-md-10
-					.col-md-8
-						h4 Envío de póliza
-			.row
-				.col-md-offset-1.col-md-10
-					.col-md-12
-						h2.subt Selecciona el medio por el cual quieres recibir tu póliza.
-			.row
-				.col-md-offset-1.col-md-10
-					.col-md-2
-						input.entregaP(type="radio",id="radioEnvioCe",name='medioRecibo',value='Correo', checked="true")
-						label Correo eléctronico
-					.col-md-2
-						input.entregaP(type="radio",id="radioEnvioD",name='medioRecibo',value='Domicilio')
-						label Domicilio
-					.col-md-4
-						input.entregaP(type="radio",id="radioEnvioPw",name='medioRecibo',value='Consulta')
-						label Descargar en
-							a(href="www.segurosbancomer.com") www.segurosbancomer.com
-					.col-md-4
-						input.entregaP(type="radio",id="radioEnvioT",name='medioRecibo',value='SAC')
-						label Llamar al Centro de Servicio al Cliente
-			.row.envio
-				br
-				.col-md-offset-1.col-md-10
-					.col-md-12
-						p ¿El domicilio es el mismo con el que está registrado el inmueble?
-					.row
-						.col-md-12
-							.col-md-1
-								input#rInmS(type="radio",name='registro',value='Si')
-								label Si
-							.col-md-1
-								input#rInmN(type="radio",name='registro',value='No')
-								label No
-					.row
-						.col-md-5
-							.col-md-6
-								.form-group
-									label A partir de las
-									select#horaC.form-control
-										option(value="opcion-1",name='') 11:30
-										option(value="opcion-2",name='') 12:00
-										option(value="opcion-3",name='') c
-										option(value="opcion-4",name='') d
-							.col-md-6
-								.form-group
-									label Hasta las
-									select#horaF.form-control
-										option(value="opcion-1",name='') 17:00
-										option(value="opcion-2",name='') 16:30
-										option(value="opcion-3",name='') c
-										option(value="opcion-4",name='') d
-						.col-md-6
-							.col-md-8
-								.form-group
-									label Detalle (Entre que calles se encuentran)
-									input#dCalles.form-control(type="textarea",placeholder="Entre Pianini y Motolinia",nombre="dCalles")
+		//- .container.bgazul5.envioPoliza
+		//- 	.row
+		//- 		.col-md-offset-1.col-md-10
+		//- 			.col-md-8
+		//- 				h4 Envío de póliza
+		//- 	.row
+		//- 		.col-md-offset-1.col-md-10
+		//- 			.col-md-12
+		//- 				h2.subt Selecciona el medio por el cual quieres recibir tu póliza.
+		//- 	.row
+		//- 		.col-md-offset-1.col-md-10
+		//- 			.col-md-2
+		//- 				input.entregaP(type="radio",id="radioEnvioCe",name='medioRecibo',value='Correo', checked="true")
+		//- 				label Correo eléctronico
+		//- 			.col-md-2
+		//- 				input.entregaP(type="radio",id="radioEnvioD",name='medioRecibo',value='Domicilio')
+		//- 				label Domicilio
+		//- 			.col-md-4
+		//- 				input.entregaP(type="radio",id="radioEnvioPw",name='medioRecibo',value='Consulta')
+		//- 				label Descargar en
+		//- 					a(href="www.segurosbancomer.com") www.segurosbancomer.com
+		//- 			.col-md-4
+		//- 				input.entregaP(type="radio",id="radioEnvioT",name='medioRecibo',value='SAC')
+		//- 				label Llamar al Centro de Servicio al Cliente
+		//- 	.row.envio
+		//- 		br
+		//- 		.col-md-offset-1.col-md-10
+		//- 			.col-md-12
+		//- 				p ¿El domicilio es el mismo con el que está registrado el inmueble?
+		//- 			.row
+		//- 				.col-md-12
+		//- 					.col-md-1
+		//- 						input#rInmS(type="radio",name='registro',value='Si')
+		//- 						label Si
+		//- 					.col-md-1
+		//- 						input#rInmN(type="radio",name='registro',value='No')
+		//- 						label No
+		//- 			.row
+		//- 				.col-md-5
+		//- 					.col-md-6
+		//- 						.form-group
+		//- 							label A partir de las
+		//- 							select#horaC.form-control
+		//- 								option(value="opcion-1",name='') 11:30
+		//- 								option(value="opcion-2",name='') 12:00
+		//- 								option(value="opcion-3",name='') c
+		//- 								option(value="opcion-4",name='') d
+		//- 					.col-md-6
+		//- 						.form-group
+		//- 							label Hasta las
+		//- 							select#horaF.form-control
+		//- 								option(value="opcion-1",name='') 17:00
+		//- 								option(value="opcion-2",name='') 16:30
+		//- 								option(value="opcion-3",name='') c
+		//- 								option(value="opcion-4",name='') d
+		//- 				.col-md-6
+		//- 					.col-md-8
+		//- 						.form-group
+		//- 							label Detalle (Entre que calles se encuentran)
+		//- 							input#dCalles.form-control(type="textarea",placeholder="Entre Pianini y Motolinia",nombre="dCalles")
 		.container.bgwhite
 			.space
 			form
