--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -323,19 +323,29 @@ ul.list-group{
 		color:#fff;
 		h2{
 			font-weight: 700;
+			font-family: StagSans-Medium;
+			font-size: 30px;
+			color: #FFFFFF;
 		}
 		h3{
-			font-size: 31px;
+			font-family: StagSans-Book;
+			font-size: 25px;
+			color: #FFFFFF;
 		}
 		h4{
-			color: #fff;
-		    font-size: 28px;
+		    font-family: StagSans-Book;
+			font-size: 20px;
+			color: #FFFFFF;
 		}
 		h5{
-			font-size: 17px;
+			font-family: StagSans-Book;
+			font-size: 16px;
+			color: #FFFFFF;
+			letter-spacing: -0.3px;
 		}
 		span{
 			font-size: 22px;
+			font-family: StagSans-Medium;
 		}
 		.verde{
 			color: $verde;
