--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -311,19 +311,29 @@ color: $gris3;}
 		color:#fff;
 		h2{
 			font-weight: 700;
+			font-family: StagSans-Medium;
+			font-size: 30px;
+			color: #FFFFFF;
 		}
 		h3{
-			font-size: 31px;
+			font-family: StagSans-Book;
+			font-size: 25px;
+			color: #FFFFFF;
 		}
 		h4{
-			color: #fff;
-		    font-size: 28px;
+		    font-family: StagSans-Book;
+			font-size: 20px;
+			color: #FFFFFF;
 		}
 		h5{
-			font-size: 17px;
+			font-family: StagSans-Book;
+			font-size: 16px;
+			color: #FFFFFF;
+			letter-spacing: -0.3px;
 		}
 		span{
 			font-size: 22px;
+			font-family: StagSans-Medium;
 		}
 		.verde{
 			color: $verde;
@@ -392,11 +402,35 @@ color: $gris3;}
 	}
 	p.labelgral{
 		color:$azul6;
+		font-family: StagSans-Book;
 		font-size: 14px;
+		line-height: 24px;
 	}	
 	p.dato{
-		color:#fff;
+		font-family: StagSans-Book;
 		font-size: 18px;
+		color: #FFFFFF;
+		line-height: 24px;
+	}
+	p.dato.wig{
+		font-family: StagSans-Medium;
+		font-size: 20px;
+		color: #FFFFFF;	
+	}
+	.bgazul5{
+		background: $azul5;
+		padding: 0px;
+	    border-bottom: none;
+		h6{
+			font-family: StagSans-Book;
+			font-size: 16px;
+			color: #FFFFFF;
+		}
+		h4{
+			font-family: StagSans-Medium;
+			font-size: 20px;
+			color: #FFFFFF;
+		}
 	}
 }
 .bgazul3{
@@ -405,20 +439,26 @@ color: $gris3;}
 	&.resumen{
 	h4{
 		color:$azul6;
+		font-family: StagSans-Book;
+		font-size: 20px;
 	}
 	p.labelgral{
 		color:$azul6;
 	}	
 	p.dato{
-		color:#fff;
-		font-size: 18px;
+		font-family: StagSans-Book;
+		font-size: 21px;
+		color: #FFFFFF;
 	}
 	h1{
-		color: #fff;
+		font-family: StagSans-Medium;
+		font-size: 30px;
+		color: #FFFFFF;
 	}
-		ul li,p{
-			color:#fff;
-			font-size: 18px;
+		h6,p{
+			font-family: StagSans-Book;
+			font-size: 12px;
+			color: #FAFAFA;
 		}
 	}
 }
@@ -890,7 +930,13 @@ ul.list-group{
 }
 .contrata{
 	h2.subt{
-		font-weight: 700;
-		color: #fff;
+		font-family: StagSans-Medium;
+		font-size: 24px;
+		color: #FFFFFF;
+	}
+	h4{
+		font-family: StagSans-Book;
+		font-size: 20px;
+		color: #B5E5F9;
 	}
 }
