--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -40,10 +40,8 @@ html(lang="en")
 						.ico.poliza
 						h3.text-center Recibe tu póliza
 						span
-		hr
-		
-		h1 registro
-		h2.subtitulo ingreso de datos
+				.row
+					.space
 		
 		.container.bgwhite
 			form
