--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -1020,8 +1020,8 @@ html(lang="en")
 			.row
 				.col-md-offset-1.col-md-10
 					.col-md-12
-						.col-md-1.text-right.info
-							img(src="../assets/img/ico_aviso.png", alt="")
+						.col-md-1.text-right.info.exito1
+							
 						.col-md-11
 							h5 Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 			.space
@@ -1029,8 +1029,7 @@ html(lang="en")
 			.row
 				.col-md-offset-1.col-md-10.bgazul7
 					.space
-					.col-md-1.text-right
-						img(src="../assets/img/ico_comprobante.png", alt="")
+					.col-md-1.text-right.exito2
 					.col-md-11
 						h6 Se ha generado tu comprobante de compra, el cual de manera automática se ha enviado al mail que registraste: 
 							strong ana00@gmail.com
