--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -590,8 +590,9 @@ html(lang="en")
 								.col-md-8
 									h3 Recomendaciones para registrar a tus beneficiarios:
 									ul
-										li -"Revisar rubro"
-										li -"Revisar rubro"
+										li - Personas mayores de edad o próximo a serlos
+										li - Tener un parentesco
+										li - No rebasar el 100% de la asignación
 								.col-md-4.text-center.pregB
 									br
 									button#agregarBene.btn-lg.btn-solid(type='button') 
