--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -949,13 +949,21 @@ html(lang="en")
 				.space
 			.row
 				.col-md-12
-					.col-md-1.text-right.info
-						img(src="../assets/img/ico_aviso.png", alt="")
+					.col-md-1.text-right.info.exito1
 					.col-md-10
 						h5 Aplican restricciones y exlusiones, para dudas y aclaraciones, ingresa a www.segurosbancomer.com o llama al Centro de Servicio al Cliente: CDMX y zona metropolitana 11020000, interior de la República (0155) 11020000
 			.space
-		.container
-			.row.bgwhite
+		.container.bgwhite
+			.row
+				.col-md-offset-1.col-md-10.bgazul7
+					.space
+					.col-md-1.text-right.exito2
+					.col-md-11
+						h5.comprobante Se ha generado tu comprobante de compra, el cual de manera automática se ha enviado al mail que registraste: 
+							strong ana00@gmail.com
+					.col-md-11
+						.space
+			.row
 				.col-md-12.text-center
 					br
 					button.btn-lg.btn-solid DESCARGAR PDF
